# wbhealth-updates

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml  netaccess.yml  test.yml  test_beta.yml
logs/: logged-employment.json  logged-go.json  logged-notice.json
utils/: parser.py  sender.py
