[tool.poetry]
name = "wbhealth-updates"
version = "0.1.0"
description = "Updates to tg channel"
authors = ["eedeidk <59429783+eedeidk@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "wbhealth_updates"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.2"
pyrogram = "^2.0.97"
tgcrypto = "^1.2.5"
pandas = "^1.5.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.20.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
